@@ -39,7 +39,6 @@ typedef struct {
   gboolean wp_update_gconf;
   GtkIconView *wp_view;
   GtkTreeModel *wp_model;
-  GtkCellRenderer *wp_cell;
   GtkWidget *wp_scpicker;
   GtkWidget *wp_pcpicker;
   GtkWidget *wp_style_menu;
